--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,3 +1,3 @@
 <ul *ngFor = 'let quote of quotes'>
-   <li>{{quote.quote}} <span class="text-primary"> Upvotes: {{quote.upvotes}}</span> <span class="text-danger ml-3"> Downvotes: {{quote.downvotes}}</span></li>
+   <li appHighlight>{{quote.quote}} <span class="text-primary"> Upvotes: {{quote.upvotes}}</span> <span class="text-danger ml-3"> Downvotes: {{quote.downvotes}}</span></li>
 </ul>
