--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
     </div>
        <div class="col-md-4">
          <h2>Quotes Form</h2>
+         <app-form></app-form>
        </div>
   </div>
 </div>
