--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,5 +1,5 @@
 <ul *ngFor = 'let quote of quotes'>
-    <div *ngIf = 'quote.upvotes == highest; then highlight else empty'></div>
+    <div *ngIf = 'quote.upvotes == highest && quote.upvotes>0; then highlight else empty'></div>
     <ng-template #highlight>
         <li appHighlight>{{quote.quote}} <span class="text-primary"> Upvotes: {{quote.upvotes}}</span> <span class="text-danger ml-3"> Downvotes: {{quote.downvotes}}</span></li>
     </ng-template>
