--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -2,22 +2,17 @@
     <form>
         <div class="form-group">
   
-            <label for="name">Name</label>
-            <input type="text" required class="form-control" id="name">
+            <label for="name">Quote</label>
+            <input type="text" required class="form-control" id="quote">
   
         </div>
         <div class="form-group">
   
-            <label for="description">Description</label>
-            <textarea class="form-control" id="description" rows="4" required></textarea>
-  
-        </div>
-        <div class="form-group">
-            <label for="complete">Completion</label>
-            <input type='date' id="complete" required>
+            <label for="description">Author</label>
+            <input type="text" required class="form-control" id="author">
   
         </div>
 
-      <button type="submit" class="btn btn-success">Add Goal</button>
+      <button type="submit" class="btn btn-success">Add Quote</button>
     </form>
   </div>
