--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -2,7 +2,13 @@
     <form>
         <div class="form-group">
   
-            <label for="name">Quote</label>
+            <label for="name">Name</label>
+            <input type="text" required class="form-control" id="name">
+  
+        </div>
+        <div class="form-group">
+  
+            <label for="description">Quote</label>
             <input type="text" required class="form-control" id="quote">
   
         </div>
