Add updated footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,12 @@
+<footer>
+    <img src="./images/assets/social_icons/twitter.png" alt="twitter">
+    <img src="./images/assets/social_icons/dribble.png" alt="dribble">
+    <img src="./images/assets/social_icons/facebook.png" alt="facebook">
+    <img src="./images/assets/social_icons/g_plus.png" alt="g_plus">
+    <img src="./images/assets/social_icons/skype.png" alt="skype">
+    <img src="./images/assets/social_icons/stumble_upon.png" alt="stumble_upon">
+    <img src="./images/assets/social_icons/behance.png" alt="behance">
+    <img src="./images/assets/social_icons/pinterest.png" alt="pinterest">
+    <img src="./images/assets/social_icons/flickr.png" alt="flickr">
 
+</footer>
