--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-navbar></app-navbar>
-<h1 class="mt-3 text-center">Quotes Component</h1>
+<h1 class="mt-3 text-center">Quotes</h1>
 <div class="container">
   <div class="row mt-md-2 pt-4">
     <div class="col-md-8">
-      <h2>My Quotes</h2>
+      <h2>All In One Quotes</h2>
       <app-quotes></app-quotes>
     </div>
        <div class="col-md-4">
