Add updated navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row mt-md-2 pt-4">
     <div class="col-md-8">
-      <h2>All In One Quotes</h2>
+      <h2>All Quotes</h2>
       <app-quotes></app-quotes>
     </div>
        <div class="col-md-4">
