--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,4 +1,14 @@
-<ul *ngFor = 'let quote of quotes'>
+<p>Quote by: {{quote.author}}</p>
+<p>Upvotes: {{quote.upvotes}}</p>
+<p>Downvotes: {{quote.downvotes}}</p>
+
+<p>
+    This quote was posted {{quote.completeDate|dateCount}} days ago
+   </p>
+<button class="btn-success" (click)="deleteQuote(true)"><fa-icon [icon]="faTrashCan"></fa-icon></button>
+<button class="btn-primary " (click)="upvotes()"><fa-icon [icon]="faThumbsUp"></fa-icon></button>
+<button class="btn-danger" (click)="downvotes()"><fa-icon [icon]="faThumbsDown"></fa-icon></button>
+<!-- <ul *ngFor = 'let quote of quotes'>
     <div *ngIf = 'quote.upvotes == highest && quote.upvotes>0; then highlight else empty'></div>
     <ng-template #highlight>
         <li appHighlight>{{quote.quote}} <span class="text-primary"> Upvotes: {{quote.upvotes}}</span> <span class="text-danger ml-3"> Downvotes: {{quote.downvotes}}</span></li>
@@ -7,4 +17,4 @@
         <li>{{quote.quote}} <span class="text-primary"> Upvotes: {{quote.upvotes}}</span> <span class="text-danger ml-3"> Downvotes: {{quote.downvotes}}</span></li>
     </ng-template>
 
-</ul>
+</ul> -->
