--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -5,9 +5,9 @@
 <p>
     This quote was posted {{quote.completeDate|dateCount}} days ago
    </p>
-<button class="btn-success" (click)="deleteQuote(true)"><fa-icon [icon]="faTrashCan"></fa-icon></button>
-<button class="btn-primary " (click)="upvotes()"><fa-icon [icon]="faThumbsUp"></fa-icon></button>
-<button class="btn-danger" (click)="downvotes()"><fa-icon [icon]="faThumbsDown"></fa-icon></button>
+<button class="btn-success" (click)="deleteQuote(true)"></button>
+<button class="btn-primary " (click)="upvotes()"></button>
+<button class="btn-danger" (click)="downvotes()"></button>
 <!-- <ul *ngFor = 'let quote of quotes'>
     <div *ngIf = 'quote.upvotes == highest && quote.upvotes>0; then highlight else empty'></div>
     <ng-template #highlight>
